--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       padding: 1vw;
     }
         .c1 {
-            background: url("img/f1.gif") no-repeat center center;
+            background: url("img/f1.jpeg") no-repeat center center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
