--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@ label{
    <div class="container text-center">
       <div class="row">
          <div class="col">
-            <img class="card-img-top" src="Capturar.png" alt="Card image cap">
+            <img class="card-img-top" src="http://2.bp.blogspot.com/-l3edy_OraHM/UUe_aVl-mgI/AAAAAAAAA-Q/Td39o1mMD9k/s1600/jpeg.jpg" alt="Card image cap">
             <div class="card-body">
                <h4 class="card-title">Igreja Evangélica Assembleia de Deus em
                   Bela Vista</h4>
                <p class="card-text">site da igreja</p>
-               <a href="https://tarsilasamille.github.io/Site/Site/index2.html"
+               <a href="http://www.assembleiadedeusbelavista.tk/"
                   class="btn btn-primary">Acesse</a>
             </div>
          </div>
